// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > hide items after maxLength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="cloud"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  cloud
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="provider"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  provider
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="database"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  database
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_51_"
          aria-describedby="_r_51_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +2
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                duolc
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                redivorp
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                esabatad
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          2+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_c_"
          aria-describedby="_r_c_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          1+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="very"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  very
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="item"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  item
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="item"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  item
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="item"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  item
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="item"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  item
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_bp_"
          aria-describedby="_r_bp_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +50
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yrev
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                meti
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                meti
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                meti
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                meti
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          50+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway is the best cloud provider ever invented"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway is the best cloud provider ever invented
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                detnevni reve redivorp duolc tseb eht si yawelacs
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          0+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="cloud"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  cloud
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_2n_"
          aria-describedby="_r_2n_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                duolc
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          1+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly when maxLength is smaller than first tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          0+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles__18qbklt5"
            >
              <div
                class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
              >
                <button
                  class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                  data-testid="scaleway"
                >
                  <span
                    class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                  >
                    scaleway
                  </span>
                </button>
              </div>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles__18qbklt5"
            >
              <div
                class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
              >
                <button
                  class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                  data-testid="cloud"
                >
                  <span
                    class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                  >
                    cloud
                  </span>
                </button>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles__18qbklt5"
          >
            <div
              class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <button
                class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                data-testid=""
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  yawelacs
                </span>
              </button>
            </div>
          </div>
          <div
            class="styles__18qbklt5"
          >
            <div
              class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <button
                class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                data-testid=""
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  duolc
                </span>
              </button>
            </div>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          0+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="cloud"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  cloud
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                duolc
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          0+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="cloud"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  cloud
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_22_"
          aria-describedby="_r_22_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                duolc
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          1+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_3g_"
          aria-describedby="_r_3g_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +2
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          2+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles__18qbklt5"
            >
              <div
                class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
              >
                <button
                  class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                  data-testid="scaleway"
                >
                  <span
                    class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                  >
                    scaleway
                  </span>
                </button>
              </div>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles__18qbklt5"
            >
              <div
                class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
                style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
              >
                <button
                  class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                  data-testid="cloud"
                >
                  <span
                    class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                  >
                    cloud
                  </span>
                </button>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles__18qbklt5"
          >
            <div
              class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <button
                class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                data-testid=""
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  yawelacs
                </span>
              </button>
            </div>
          </div>
          <div
            class="styles__18qbklt5"
          >
            <div
              class="styles_copiable__1gaaepy0 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <button
                class="styles__1f9zr5y7 styles_copiable__1gaaepy3 styles__1gaaepy5 styles_copiable_true__1gaaepy6 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh styles_undefined_compound_2__1gaaepyk"
                data-testid=""
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  duolc
                </span>
              </button>
            </div>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          0+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3 styles_multiline_true__1f9zr5y4"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="cloud"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  cloud
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_5m_"
          aria-describedby="_r_5m_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3 styles_multiline_true__1f9zr5y4"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                duolc
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          1+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      />
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        />
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          0+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <ul
          class="styles__1f9zr5y5"
        >
          <li
            class="styles__1f9zr5y6"
          >
            <div
              class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
              style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
            >
              <span
                class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
                data-testid="scaleway"
              >
                <span
                  class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
                >
                  scaleway
                </span>
              </span>
            </div>
          </li>
        </ul>
        <div
          aria-controls="_r_p_"
          aria-describedby="_r_p_"
          class="styles__10e61c29"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y8"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__1gaaepy1 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
            style="--_1d8tbmb0: fit-content; --_1d8tbmb1: 100%;"
          >
            <span
              class="styles__1f9zr5y7 styles_notCopiable__1gaaepy4 styles__1gaaepy5 styles_sentiment_neutral__1gaaepyb styles_isButton_false__1gaaepyh"
              data-testid=""
            >
              <span
                class="styles__1gaaepy13 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                yawelacs
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y8"
          type="button"
        >
          1+
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
